--- a/FeriaDeLibro.Web/Views/Shared/_Layout.cshtml
+++ b/FeriaDeLibro.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FeriaDeLibro.Web</title>
+    <title>@ViewData["Title"] - Instituto Tecnológico Goya</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FeriaDeLibro.Web.styles.css" asp-append-version="true" />
@@ -12,19 +13,55 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FeriaDeLibro.Web</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FeriaDeLibro</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 d-flex">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Eventos</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <!-- bropdown menu-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                ¿Que estudiar?
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark dropdown-item " asp-area="" asp-controller="Home" asp-action="Programming">Programación</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark  dropdown-item" asp-area="" asp-controller="Home" asp-action="PcManager">Operador PC</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark  dropdown-item" asp-area="" asp-controller="Home" asp-action="PcRepair">Reparación PC</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark  dropdown-item" asp-area="" asp-controller="Home" asp-action="Mecatronic">Mecatrónica</a>
+                                </li>
+                            </ul>
                         </li>
+                        
+                        
+                        @if (@HttpContextAccessor.HttpContext.Session.GetString("UsuarioModel") != null)
+                        {
+                            <li class="nav-item ms-sm-auto">
+                                <!--va a la derecha en mantallas mayores a 576px-->
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Crear evento</a>
+                            </li>
+                            <div>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="CerrarSesion">Cerrar sesion</a>
+                            </div>
+                        }else
+                        {
+                            <li class="nav-item ms-sm-auto">
+                                <!--va a la derecha en mantallas mayores a 576px-->
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
@@ -38,7 +75,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - FeriaDeLibro.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - By <a href="https://www.linkedin.com/in/gonzalo-gomez12" target="_blank">Gonzalo Gomez </a>-
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
