adding umage uploading feature

--- a/FeriaDeLibro.Web/Views/Home/Index.cshtml
+++ b/FeriaDeLibro.Web/Views/Home/Index.cshtml
@@ -20,7 +20,8 @@
                     <div class="card mb-3" style="max-width: 95%;">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="@item.Image" class="img-fluid rounded-start" alt="...">@* Imagen *@
+                                <img src="@item.Image" class="img-fluid rounded-start card-img"  alt="...">@* Imagen *@
+                                @* <img src="@item.Image" class="img-fluid rounded-start" alt="...">@* Imagen *@ 
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
