--- a/FeriaDeLibro.Web/Views/Admin/Index.cshtml
+++ b/FeriaDeLibro.Web/Views/Admin/Index.cshtml
@@ -6,15 +6,15 @@
 <title>@ViewData["Title"]</title>
 <h1>Crear Evento</h1>
 <hr />
-<div class="row">
+<div class="row justify-content-center">
     @if (ViewBag.SuccessMessage != null) // captura mensaje desde el controlador
     {
         <div class="alert alert-success text-center">
             @ViewBag.SuccessMessage
         </div>
     }
-    <div class="col-md-4">
-        <form asp-controller="Event" asp-action="Create" method="post"> <!-- cambiar -->
+    <div class="col-md-8">
+        <form asp-controller="Event" asp-action="Create" method="post" enctype="multipart/form-data"> <!-- cambiar -->
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
                 <label asp-for="EventName" class="form-label">Nombre del evento</label>
@@ -48,12 +48,14 @@
                 <span asp-validation-for="Curso.CourseId" class="text-danger"></span>
             </div>
             @*Imagen*@
-            <div class="input-group mb-3">
+            </br>
+            <div class="form-group mb-3">
                 <label asp-for="Image" class="form-label">Imagen </label>
                 <input asp-for="Image" type="file" class="form-control" id="inputGroupFile02">
-                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                @* <label class="input-group-text" for="inputGroupFile02">Subir</label> *@
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
+            </br>
             @*Descripcion*@
             <div class="mb-3">
                 <label asp-for="Description" class="form-label">Descripcion</label>
@@ -62,7 +64,7 @@
 
             </div>
             <div class="form-group">
-                <input type="submit" value="crear" class="btn btn-outline-primary" />
+                <input type="submit" value="Crear evento" class="btn btn-outline-primary form-control" />
             </div>
         </form>
         @if (ViewBag.Alert != null)
