--- a/FeriaDeLibro.Web/Views/Shared/_Layout.cshtml
+++ b/FeriaDeLibro.Web/Views/Shared/_Layout.cshtml
@@ -11,9 +11,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FeriaDeLibro</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
+            <div class="container-fluid d-flex align-items-center">
+
+                <div class="d-flex align-items-center me-3 ">
+                       <img src="./images/logoITG.jpg" alt="Logo" style="height: 40px; margin-right: 10px;">
+                        
+                    </div>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Feria del Libro</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,25 +26,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1 d-flex">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Eventos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Eventos</a>
                         </li>
                         <!-- bropdown menu-->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 ¿Que estudiar?
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark dropdown-item " asp-area="" asp-controller="Home" asp-action="Programming">Programación</a>
+                                    <a class="nav-link text-black dropdown-item " asp-area="" asp-controller="Home" asp-action="Programming">Programación</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark  dropdown-item" asp-area="" asp-controller="Home" asp-action="PcManager">Operador PC</a>
+                                    <a class="nav-link text-black dropdown-item" asp-area="" asp-controller="Home" asp-action="PcManager">Operador PC</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark  dropdown-item" asp-area="" asp-controller="Home" asp-action="PcRepair">Reparación PC</a>
+                                    <a class="nav-link text-black  dropdown-item" asp-area="" asp-controller="Home" asp-action="PcRepair">Reparación PC</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark  dropdown-item" asp-area="" asp-controller="Home" asp-action="Mecatronic">Mecatrónica</a>
+                                    <a class="nav-link text-black  dropdown-item" asp-area="" asp-controller="Home" asp-action="Mecatronic">Mecatrónica</a>
                                 </li>
                             </ul>
                         </li>
@@ -49,16 +54,16 @@
                         {
                             <li class="nav-item ms-sm-auto">
                                 <!--va a la derecha en mantallas mayores a 576px-->
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Crear evento</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Admin">Crear evento</a>
                             </li>
                             <div>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="CerrarSesion">Cerrar sesion</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="CerrarSesion">Cerrar sesion</a>
                             </div>
                         }else
                         {
                             <li class="nav-item ms-sm-auto">
                                 <!--va a la derecha en mantallas mayores a 576px-->
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
                             </li>
                         }
 
