--- a/FeriaDeLibro.Web/wwwroot/css/site.css
+++ b/FeriaDeLibro.Web/wwwroot/css/site.css
@@ -20,3 +20,141 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/* Estilo general para el fondo */
+body {
+    background-color: #F0F2F5;
+    color: #333333;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+/* Header */
+header {
+    background-color: #FFFFFF;
+    /*padding: 20px;*/
+    box-shadow: 0 4px 2px -2px #CCCCCC;
+}
+
+    header .navbar-brand {
+        /*color: #007BFF;*/
+        color: #F0F2F5;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    header .nav-link {
+        color: #555555;
+    }
+    
+
+        header .nav-link:hover {
+            color: #007BFF;
+        }
+        .navbar{
+            background-color : #00283C;
+        }
+
+/* Footer */
+footer {
+    background-color: #FFFFFF;
+    padding: 10px 0;
+    text-align: center;
+    border-top: 1px solid #CCCCCC;
+}
+
+    footer .container {
+        color: #555555;
+    }
+
+/* Botones */
+button, .btn {
+    background-color: #007BFF;
+    color: #FFFFFF;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+    button:hover, .btn:hover {
+        background-color: #0056b3;
+    }
+
+/* Formularios */
+form {
+    background-color: #FFFFFF;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+input[type="text"], input[type="email"], input[type="password"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #CCCCCC;
+    border-radius: 5px;
+}
+
+    input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, textarea:focus {
+        border-color: #007BFF;
+        outline: none;
+    }
+
+/* Labels */
+label {
+    font-weight: bold;
+    color: #333333;
+}
+
+
+
+    header .navbar-brand {
+        color: #007BFF;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    header .nav-link {
+        color: #555555;
+    }
+
+        header .nav-link:hover {
+            color: #007BFF;
+        }
+
+
+
+
+input[type="text"], input[type="email"], input[type="password"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #CCCCCC;
+    border-radius: 5px;
+}
+
+    input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, textarea:focus {
+        border-color: #007BFF;
+        outline: none;
+    }
+
+/* Labels */
+label {
+    font-weight: bold;
+    color: #333333;
+}
+
+/*.col-md-4 {
+    width: 50.33333333%;
+}*/
+/*.card .row .col-md-4 .card-img {
+    height: 100%;
+    object-fit: cover;
+}*/
+
+/*@media (width: 768px) {
+    .card .row {
+        flex-wrap: nowrap;
+    }
+}*/
