Addind Asynchronism (async , Task & await)

--- a/FeriaDeLibro.Web/Views/Course/PcManager.cshtml
+++ b/FeriaDeLibro.Web/Views/Course/PcManager.cshtml
@@ -32,18 +32,18 @@
 <div>
     <div class="card w-100" @* style="width: 18rem; *@">
         <div class="card-body">
-            <h5 class="card-title">Operador de Pc</h5> <!-- hacer uppercase -->
-            <h6 class="card-subtitle mb-2 text-body-secondary">Duracion : 1 año</h6>
+            <h4 class="card-title fw-bold">Operador de Pc</h4> <!-- hacer uppercase -->
+            <h6 class="card-subtitle mb-2 text-body-secondary">Duración : 1 año</h6>
             <p class="card-text">Requisitos: </p>
             <ul>
                 <li class="card-text">Fotocopia DNI</li>
                 <li class="card-text">Titulo Secundario</li>
                 <li class="card-text">Partida de nacimiento</li>
             </ul>
-            <p class="card-text">Descripción: Desarrollo de aplicaciones de tipo web, escritorio y mobile aplicando las mejores y mas modernas tecnologias del mercado.</p>
+            <p class="card-text">Descripción: e desarrollan capacidades para utilizar herramientas informáticas de uso corriente en el entorno de trabajo, para resolución de problemas propios de la actividad que realice: administrativo gestional y comunicacional, remitiéndose a especialistas para solucionar problemas de mayor complejidad.</p>
 
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="https://itgoya.gob.ar/operador-de-informatica-para-la-administracion-y-gestion/" class="card-link" target="_blank">Click aquí para más info.</a>
+
         </div>
     </div>
 </div>
