--- a/FeriaDeLibro.Web/Views/Admin/Index.cshtml
+++ b/FeriaDeLibro.Web/Views/Admin/Index.cshtml
@@ -1,81 +1,96 @@
-﻿ @model FeriaDeLibro.Web.Models.SingleEventModel 
-@* @model FeriaDeLibro.Entities.Models.Event
- *@@{
-    ViewData["Title"] = "Crear evento";
-}
-<title>@ViewData["Title"]</title>
-<h1>Crear Evento</h1>
-<hr />
-<div class="row justify-content-center">
-    @if (ViewBag.SuccessMessage != null) // captura mensaje desde el controlador
-    {
-        <div class="alert alert-success text-center">
-            @ViewBag.SuccessMessage
-        </div>
-    }
-    <div class="col-md-8">
-        <form asp-controller="Event" asp-action="Create" method="post" enctype="multipart/form-data"> <!-- cambiar -->
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-3">
-                <label asp-for="EventName" class="form-label">Nombre del evento</label>
-                <input asp-for="EventName" class="form-control">
-                <span asp-validation-for="EventName" class="text-danger"></span> <!-- mensaje de error-->
-            </div>
-            @* fecha *@
-            <div class="mb-3">
-                <label asp-for="EventDate" class="form-label">Fecha </label>
-                <input asp-for="EventDate" class="form-control" >
-                <span asp-validation-for="EventDate" class="text-danger"></span>
-            </div>
-            @* hora *@
-            <div class="mb-3">
-                <label asp-for="StartTime" class="form-label">Hora </label>
-                <input asp-for="StartTime" class="form-control">
-                <span asp-validation-for="StartTime" class="text-danger"></span>
-            </div>
-            @* <div class="mb-3">
-                <select class="form-select" aria-label="Selecciona un curso">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div> *@
-            <div class="form-group">
-                <label asp-for="Course" class="control-label">Curso</label>
-                @* Mostrar lista desplegable de cursos *@
-                @Html.DropDownListFor(model => model.Curso.CourseId, (IEnumerable<SelectListItem>)ViewBag.Courses, "-- Seleccione un curso --", new { @class = "form-control" })
-                <span asp-validation-for="Curso.CourseId" class="text-danger"></span>
-            </div>
-            @*Imagen*@
-            </br>
-            <div class="form-group mb-3">
-                <label asp-for="Image" class="form-label">Imagen </label>
-                <input asp-for="Image" type="file" class="form-control" id="inputGroupFile02">
-                @* <label class="input-group-text" for="inputGroupFile02">Subir</label> *@
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            </br>
-            @*Descripcion*@
-            <div class="mb-3">
-                <label asp-for="Description" class="form-label">Descripcion</label>
-                <textarea asp-for="Description" class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe una descripción"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
+﻿@model FeriaDeLibro.Web.Models.EventModel
+<div class="container-fluid">
 
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Crear evento" class="btn btn-outline-primary form-control" />
-            </div>
-        </form>
-        @if (ViewBag.Alert != null)
-        {
-            <div class="alert alert-dismissable alert-danger">
-                <button type="button" class="close" data-dismiss="alert">
-                    &times;
-                </button>
-                <strong>Aviso!</strong> @ViewBag.Alert
-            </div>
-        }
-    </div>
+    <!-- Page Heading -->
+    <h1 class="h3 mb-2 text-gray-800">Administración de Eventos</h1>
     
+        
+    <!-- DataTales Example -->
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Eventos</h6>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered " id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Fecha</th>
+                            <th>Horario</th>
+                            <th>Curso</th>
+                            <th>Descripcion</th>
+                            <th style="width:230px">Acción</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Fecha</th>
+                            <th>Horario</th>
+                            <th>Curso</th>
+                            <th>Descripcion</th>
+                            <th style="width:230px">Acción</th>
+                        </tr>
+                    </tfoot>
+                    <!--seteamos los campos con cada dato traido desde el servlet SvOdontologo-->
+                    <tbody>
+                        @if (Model.Events.Any())
+                        {
+                            @foreach (var item in Model.Events)
+                            {
+                                <tr>
+                                    <!--variable id seteada con id usuario como "id_usuxxx" para ser mandada al servlet-->
+                                    @* <td id="@item.EventId">@item.EventId</td> *@
+                                    <td id="@item.EventId">@item.Name</td>
+                                    <td>@item.EventDate</td>
+                                    <td>@item.EventTime</td>
+                                    <td>@item.Course.CourseName</td>
+                                    <td>@item.EventDescription</td>
+
+                                    <!--botones editar y eliminar-->
+
+                                    <td class="btn-container"  style="display: flex; width:auto; justify-content: space-between" >
+                                    
+                                        <form asp-controller="Event" asp-action="EditInit" method="post" class="d-inline">
+                                            <input type="hidden" name="eventId" value="@item.EventId" />
+                                            <button type="submit" class="btn btn-primary">Editar</button>
+                                        </form>
+                                        <form asp-controller="Event" asp-action="Delete" method="post" class="d-inline" onsubmit="return confirm('¿Estás seguro de que quieres eliminar este evento?');">
+                                            <input type="hidden" name="eventId" value="@item.EventId" />
+                                            <button type="submit" class="btn btn-danger">Eliminar</button>
+                                        </form>
+                                    
+                                        @* @* <form asp-controller="Event" asp-action="Delete" method="post">
+                                            <button type="submit" class="btn btn-danger btn-user btn-block d-flex w-auto align-items-center">
+                                                <i class="fas fa-trash-alt"></i>  Eliminar
+                                            </button>
+                                            <input type="hidden" name="eventId" value=" @item.EventId">
+                                        </form>
+
+                                        <form asp-controller="Event" asp-action="EditInit" method="get">
+                                            <button type="submit" class="btn btn-primary btn-user btn-block d-flex w-auto align-items-center ">
+                                                <i class="fas fa-pencil-alt"></i> Editar
+                                            </button>
+                                            <input type="hidden" name="eventId" value=" @item.EventId">
+
+                                        </form>
+ *@ 
+                                        @* <a asp-controller="Event" asp-action="EditInit" asp-route-id="@item.EventId" class="btn btn-primary">Editar</a> *@
+                                        @* <a asp-controller="Event" asp-action="Delete" method="post" asp-route-id="@item.EventId" class="btn btn-danger" onclick="return confirm('¿Estás seguro de que quieres eliminar este evento?');">Eliminar</a> *@
+                                    </td>
+
+                                </tr>
+                            }
+                        }          
+                        
+                    </tbody>
+                </table>
+                <div>
+                    <a asp-action="Initializer" class="btn btn-outline-primary btn-sm">Crear evento</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
