--- a/FeriaDeLibro.Web/Views/Course/Mecatronic.cshtml
+++ b/FeriaDeLibro.Web/Views/Course/Mecatronic.cshtml
@@ -30,20 +30,23 @@
 </br>
 @* Descripcion *@
 <div>
-    <div class="card w-100" @* style="width: 18rem; *@">
+    <div class="card w-100">
         <div class="card-body">
-            <h5 class="card-title">Mecatronica</h5> <!-- hacer uppercase -->
-            <h6 class="card-subtitle mb-2 text-body-secondary">Duracion : 3 años</h6>
+            <h4 class="card-title fw-bold">Tecnicatura Universitaria en Mecatrónica</h4> <!-- hacer uppercase -->
+            <h6 class="card-subtitle mb-2 text-body-secondary">Duración : 2 años y medio</h6>
             <p class="card-text">Requisitos: </p>
             <ul>
                 <li class="card-text">Fotocopia DNI</li>
                 <li class="card-text">Titulo Secundario</li>
                 <li class="card-text">Partida de nacimiento</li>
             </ul>
-            <p class="card-text">Descripción: Desarrollo de aplicaciones de tipo web, escritorio y mobile aplicando las mejores y mas modernas tecnologias del mercado.</p>
+            <p class="card-text">
+                Descripción: La Mecatrónica es la aplicación de las últimas técnicas en ingeniería mecánica de precisión, electrónica, teoría de control y ciencias de la computación, para diseñar procesos y productos cada vez más funcionales y adaptables.
+                La idea básica es aplicar nuevas tecnologías de control y de computadoras, conjuntamente con electrónica asociada según el caso, para obtener niveles de desempeño superiores de un dispositivo mecánico.
+            </p>
 
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="https://itgoya.gob.ar/tecnicatura-universitaria-en-mecatronica/" class="card-link" target="_blank">Click aquí para más info.</a>
+            
         </div>
     </div>
 </div>
