--- a/FeriaDeLibro.Web/Views/Course/PcRepair.cshtml
+++ b/FeriaDeLibro.Web/Views/Course/PcRepair.cshtml
@@ -32,18 +32,19 @@
 <div>
     <div class="card w-100" @* style="width: 18rem; *@">
         <div class="card-body">
-            <h5 class="card-title">Reparadoe de Pc</h5> <!-- hacer uppercase -->
-            <h6 class="card-subtitle mb-2 text-body-secondary">Duracion : 1 año</h6>
+            <h4 class="card-title fw-bold">Reparador de Pc</h4> <!-- hacer uppercase -->
+            <h6 class="card-subtitle mb-2 text-body-secondary">Duración : 1 año</h6>
             <p class="card-text">Requisitos: </p>
             <ul>
                 <li class="card-text">Fotocopia DNI</li>
                 <li class="card-text">Titulo Secundario</li>
                 <li class="card-text">Partida de nacimiento</li>
             </ul>
-            <p class="card-text">Descripción: Desarrollo de aplicaciones de tipo web, escritorio y mobile aplicando las mejores y mas modernas tecnologias del mercado.</p>
+            <p class="card-text">Descripción: Posee como objetivo principal desarrollar destrezas técnicas para el mantenimiento y reparación de PC, implementando desde el mantenimiento preventivo y correctivo hasta la instalación de un sistema operativo y el armado y desarmado de una computadora.</p>
 
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="https://itgoya.gob.ar/reparador-de-pc/" class="card-link" target="_blank">Click aquí para más info.</a>
+
+
         </div>
     </div>
 </div>
