--- a/FeriaDeLibro.Web/Views/Course/Programming.cshtml
+++ b/FeriaDeLibro.Web/Views/Course/Programming.cshtml
@@ -35,8 +35,8 @@
 <div>
     <div class="card w-100" @* style="width: 18rem; *@">
         <div class="card-body">
-            <h5 class="card-title">Tecnicatura en Programación</h5> <!-- hacer uppercase -->
-            <h6 class="card-subtitle mb-2 text-body-secondary">Duracion : 2 años y medio.</h6>
+            <h4 class="card-title fw-bold">Tecnicatura Universitaria en Programación</h4> <!-- hacer uppercase -->
+            <h6 class="card-subtitle mb-2 text-body-secondary">Duración: 2 años y medio.</h6>
             <p class="card-text">Requisitos: </p>
                 <ul>
                     <li class="card-text">Fotocopia DNI</li>
@@ -45,8 +45,8 @@
                 </ul>
             <p class="card-text">Descripción: Desarrollo de aplicaciones de tipo web, escritorio y mobile aplicando las mejores y mas modernas tecnologias del mercado.</p>
 
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="https://itgoya.gob.ar/tecnicatura-universitaria-en-programacion-utn/" class="card-link" target="_blank">Click aquí para más info.</a>
+            
         </div>
     </div>
 </div>
