--- a/FeriaDeLibro.Web/Views/Shared/_Layout.cshtml
+++ b/FeriaDeLibro.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +9,16 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FeriaDeLibro.Web.styles.css" asp-append-version="true" />
+    <link rel="icon" type="image/jpg" href="/images/LogoITG.png" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
             <div class="container-fluid d-flex align-items-center">
 
-                <div class="d-flex align-items-center me-3 ">
-                       <img src="./images/logoITG.jpg" alt="Logo" style="height: 40px; margin-right: 10px;">
-                        
-                    </div>
+                <a href="https://itgoya.gob.ar/" target="_blank" class="text-white"><img src="/images/LogoITG.png" alt="Logo" style="height: 40px; margin-right: 10px;"></a>
+                       
+                
                 <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Feria del Libro</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +55,7 @@
                         {
                             <li class="nav-item ms-sm-auto">
                                 <!--va a la derecha en mantallas mayores a 576px-->
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Admin">Crear evento</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Admin">Administrar</a>
                             </li>
                             <div>
                                 <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="CerrarSesion">Cerrar sesion</a>
@@ -80,12 +81,15 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - By <a href="https://www.linkedin.com/in/gonzalo-gomez12" target="_blank">Gonzalo Gomez </a>-
+            &copy; 2024 - by <a href="https://www.linkedin.com/in/gonzalo-gomez12" target="_blank">Gonzalo Gomez </a>-
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <partial name="_ValidationScriptsPartial" />
+
     @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
